# playground

./: README.md  donor_emails_dataset.json  prompt.txt  pyproject.toml
playground/: 1_ner_GLiNER.ipynb  1_ner_LLM.ipynb  1_ner_llama.ipynb  1_ner_spaCy.ipynb  donor_emails_dataset.json  extracted_donors.json  results.jsonl  sythetic_data.ipynb
