[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Bruce  <97542494+BruceNiemi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
spacy = "^3.8.3"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
